--- a/index.html
+++ b/index.html
@@ -1,17 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Aesthetics By Simran Malra | Skin & Aesthetic Clinic in Sirsa</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
+<meta charset="UTF-8" />
+<title>Aesthetics By Simran Malra | Skin & Aesthetic Clinic</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Inter:wght@300;400;500&display=swap');
+
+:root{
+  --primary:#9b7c5b;
+  --dark:#1c1c1c;
+  --light:#faf8f6;
+  --muted:#6f6f6f;
+}
+
+*{margin:0;padding:0;box-sizing:border-box}
+body{
+  font-family:'Inter',sans-serif;
+  background:var(--light);
+  color:var(--dark);
+  line-height:1.7;
+}
+
+/* HEADER */
+header{
+  background:white;
+  padding:40px 8%;
+  border-bottom:1px solid #eee;
+}
+header h1{
+  font-family:'Playfair Display',serif;
+  font-size:36px;
+  font-weight:600;
+}
+.tagline{
+  color:var(--primary);
+  font-style:italic;
+  margin-top:5px;
+}
+nav{
+  margin-top:25px;
+}
+nav a{
+  text-decoration:none;
+  color:var(--dark);
+  margin-right:25px;
+  font-weight:500;
+}
+nav a:hover{color:var(--primary);}
+
+/* HERO */
+.hero{
+  padding:100px 8%;
+  background:linear-gradient(to right,#fff,#f4efe9);
+}
+.hero h2{
+  font-family:'Playfair Display',serif;
+  font-size:42px;
+  max-width:700px;
+}
+.hero p{
+  margin:20px 0;
+  max-width:600px;
+  color:var(--muted);
+}
+.btn{
+  display:inline-block;
+  margin-top:25px;
+  padding:14px 32px;
+  background:var(--primary);
+  color:white;
+  text-decoration:none;
+  border-radius:30px;
+  font-weight:500;
+}
+
+/* SECTIONS */
+section{
+  padding:80px 8%;
+}
+section h2{
+  font-family:'Playfair Display',serif;
+  font-size:32px;
+  margin-bottom:25px;
+}
+.services-list{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+  gap:20px;
+}
+.services-list li{
+  list-style:none;
+  background:white;
+  padding:22px;
+  border-radius:14px;
+  box-shadow:0 10px 30px rgba(0,0,0,.05);
+}
+
+/* FOOTER */
+footer{
+  background:#111;
+  color:#ccc;
+  padding:40px 8%;
+}
+footer a{color:var(--primary);text-decoration:none}
+
+@media(max-width:768px){
+  .hero h2{font-size:32px;}
+}
+</style>
 </head>
+
 <body>
 
 <header>
   <h1>Aesthetics By Simran Malra</h1>
   <p class="tagline">It’s a Skin-vestment</p>
-
   <nav>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
@@ -23,33 +128,34 @@
 
 <section class="hero">
   <h2>Advanced Skin, Laser & Aesthetic Treatments in Sirsa</h2>
-  <p>Personalised, safe and result-oriented aesthetic care using advanced technology.</p>
+  <p>Personalised, ethical and result-driven aesthetic care designed to enhance your natural beauty.</p>
   <a class="btn" href="contact.html">Book Appointment</a>
 </section>
 
 <section>
   <h2>Our Popular Treatments</h2>
   <ul class="services-list">
-    <li>Hydrafacial & Medi-Facials</li>
+    <li>Hydrafacial & Medical Facials</li>
     <li>Laser Hair Reduction</li>
-    <li>Microneedling & GFC</li>
-    <li>Acne Scar & Pigmentation Treatment</li>
+    <li>Microneedling & GFC Therapy</li>
+    <li>Acne Scar & Pigmentation Solutions</li>
     <li>Anti-Aging, Botox & Fillers</li>
-    <li>Semi-Permanent Make-up</li>
+    <li>Semi-Permanent Make-Up</li>
   </ul>
 </section>
 
 <section>
   <h2>Why Choose Us</h2>
   <p>
-    At Aesthetics By Simran Malra, every treatment is customised to your skin type and concerns.
-    We focus on natural results, hygienic practices and advanced, evidence-based procedures.
+    Every face is unique. At Aesthetics By Simran Malra, treatments are never generic.
+    We blend medical expertise with aesthetic precision to deliver safe, subtle and
+    confidence-boosting results.
   </p>
 </section>
 
 <footer>
   <p>📍 Near Bhuman Shah Chowk, Barnala Road, Sirsa, Haryana</p>
-  <p>📞 Call / WhatsApp: <a href="tel:+918108108042">+91 81081 08042</a></p>
+  <p>📞 Call / WhatsApp: <a href="wa.me/918108108042">+91 81081 08042</a></p>
 </footer>
 
 </body>
