--- a/thank-you.html
+++ b/thank-you.html
@@ -7,10 +7,84 @@
   <link rel="stylesheet" href="css/style.css">
 
   <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #fafafa;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      text-align: center;
+      padding: 20px;
+      background: #ffffff;
+      border-bottom: 1px solid #eee;
+    }
+
     .thankyou {
       max-width: 600px;
-      margin: 80px auto;
+      margin: 100px auto;
+      padding: 40px 25px;
       text-align: center;
+      background: #ffffff;
+      border-radius: 10px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.06);
+    }
+
+    .thankyou h2 {
+      font-size: 32px;
+      margin-bottom: 15px;
+    }
+
+    .thankyou p {
+      font-size: 16px;
+      color: #555;
+      margin-bottom: 10px;
+    }
+
+    .whatsapp-btn {
+      display: inline-flex;
+      align-items: center;
+      gap: 10px;
+      margin-top: 20px;
+      padding: 12px 24px;
+      background: #25D366;
+      color: #ffffff;
+      text-decoration: none;
+      border-radius: 6px;
+      font-size: 15px;
+    }
+
+    .whatsapp-btn img {
+      width: 22px;
+      height: 22px;
+    }
+
+    .whatsapp-btn:hover {
+      opacity: 0.9;
+    }
+
+    .btn {
+      display: inline-block;
+      margin-top: 15px;
+      padding: 12px 24px;
+      background: #000;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 6px;
+      font-size: 15px;
+    }
+
+    .btn:hover {
+      opacity: 0.85;
+    }
+
+    footer {
+      text-align: center;
+      padding: 15px;
+      background: #ffffff;
+      border-top: 1px solid #eee;
+      font-size: 14px;
     }
   </style>
 </head>
@@ -21,11 +95,19 @@
 </header>
 
 <section class="thankyou">
-  <h2>Thank You!</h2>
+  <h2>Thank You! 💖</h2>
   <p>Your query has been submitted successfully.</p>
-  <p>We’ll get back to you ASAP.</p>
+  <p>We’ll get back to you as soon as possible.</p>
+
+  <a class="whatsapp-btn"
+     href="https://wa.me/91810818042"
+     target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp">
+    Chat on WhatsApp
+  </a>
 
   <br>
+
   <a class="btn" href="index.html">Go Back to Home</a>
 </section>
 
