--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Aesthetics By Simran Malra</title>
+<meta charset="UTF-8" />
+<title>Aesthetics By Simran Malra | Skin & Aesthetic Clinic</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
@@ -15,8 +15,7 @@
   --muted:#6f6f6f;
 }
 
-*{box-sizing:border-box;margin:0;padding:0}
-
+*{margin:0;padding:0;box-sizing:border-box}
 body{
   font-family:'Inter',sans-serif;
   background:var(--light);
@@ -24,88 +23,129 @@ body{
   line-height:1.7;
 }
 
+/* HEADER */
 header{
-  background:#fff;
-  padding:32px 8%;
+  background:white;
+  padding:40px 8%;
   border-bottom:1px solid #eee;
 }
-
 header h1{
   font-family:'Playfair Display',serif;
-  font-size:34px;
+  font-size:36px;
+  font-weight:600;
 }
-
+.tagline{
+  color:var(--primary);
+  font-style:italic;
+  margin-top:5px;
+}
 nav{
-  margin-top:18px;
+  margin-top:25px;
 }
 nav a{
   text-decoration:none;
-  margin-right:22px;
   color:var(--dark);
+  margin-right:25px;
+  font-weight:500;
 }
 nav a:hover{color:var(--primary);}
 
 /* HERO */
 .hero{
-  padding:70px 8%;
-  display:grid;
-  grid-template-columns:1fr;
-  gap:30px;
-  align-items:center;
+  padding:100px 8%;
+  background:linear-gradient(to right,#fff,#f4efe9);
+}
+.hero h2{
+  font-family:'Playfair Display',serif;
+  font-size:42px;
+  max-width:700px;
+}
+.hero p{
+  margin:20px 0;
+  max-width:600px;
+  color:var(--muted);
+}
+.btn{
+  display:inline-block;
+  margin-top:25px;
+  padding:14px 32px;
+  background:var(--primary);
+  color:white;
+  text-decoration:none;
+  border-radius:30px;
+  font-weight:500;
 }
 
-.hero img{
+/* 🔹 IMAGE ADDITIONS (NON-DESTRUCTIVE) */
+.hero-image{
+  margin-top:40px;
+  max-width:900px;
+}
+.hero-image img{
   width:100%;
-  max-height:420px;
+  height:420px;
   object-fit:cover;
-  border-radius:16px;
+  border-radius:18px;
+}
+
+/* SECTIONS */
+section{
+  padding:80px 8%;
+}
+section h2{
+  font-family:'Playfair Display',serif;
+  font-size:32px;
+  margin-bottom:25px;
+}
+.services-list{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+  gap:20px;
+}
+.services-list li{
+  list-style:none;
+  background:white;
+  padding:22px;
+  border-radius:14px;
+  box-shadow:0 10px 30px rgba(0,0,0,.05);
 }
 
 /* CLINIC IMAGES */
-.section{
-  padding:70px 8%;
-}
-
-.section h2{
-  font-family:'Playfair Display',serif;
-  font-size:30px;
-  margin-bottom:25px;
-}
-
-.image-grid{
+.clinic-images{
   display:grid;
   grid-template-columns:1fr;
-  gap:20px;
+  gap:22px;
+  max-width:1000px;
 }
-
-.image-grid img{
+.clinic-images img{
   width:100%;
-  height:280px;
+  height:300px;
   object-fit:cover;
-  border-radius:14px;
+  border-radius:16px;
 }
 
 /* FOOTER */
 footer{
   background:#111;
   color:#ccc;
-  padding:35px 8%;
+  padding:40px 8%;
 }
+footer a{color:var(--primary);text-decoration:none}
 
-/* TABLET */
+/* RESPONSIVE (ONLY WHERE NEEDED) */
 @media(min-width:768px){
-  .hero{
-    grid-template-columns:1.1fr 0.9fr;
+  .hero-image img{
+    height:460px;
   }
-  .image-grid{
+  .clinic-images{
     grid-template-columns:1fr 1fr;
   }
 }
 
-/* DESKTOP */
-@media(min-width:1100px){
-  .hero img{
-    max-height:480px;
+@media(max-width:768px){
+  .hero h2{font-size:32px;}
+  .hero-image img{
+    height:280px;
   }
 }
 </style>
@@ -115,35 +155,60 @@ footer{
 
 <header>
   <h1>Aesthetics By Simran Malra</h1>
+  <p class="tagline">It’s a Skin-vestment</p>
   <nav>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="services.html">Services</a>
+    <a href="gallery.html">Gallery</a>
     <a href="contact.html">Contact</a>
   </nav>
 </header>
 
 <section class="hero">
-  <div>
-    <h2>Advanced Skin & Aesthetic Care in Sirsa</h2>
-    <p>Personalised treatments that enhance natural beauty — safely and ethically.</p>
-  </div>
+  <h2>Advanced Skin, Laser & Aesthetic Treatments in Sirsa</h2>
+  <p>Personalised, ethical and result-driven aesthetic care designed to enhance your natural beauty.</p>
+  <a class="btn" href="contact.html">Book Appointment</a>
 
-  <img src="https://raw.githubusercontent.com/Aesthetics-SimranMalra/images/main/simran_main.jpeg" alt="Simran Malra">
+  <!-- HERO IMAGE -->
+  <div class="hero-image">
+    <img src="https://raw.githubusercontent.com/Aesthetics-SimranMalra/images/main/simran_main.jpeg" alt="Simran Malra">
+  </div>
 </section>
 
-<section class="section">
+<section>
+  <h2>Our Popular Treatments</h2>
+  <ul class="services-list">
+    <li>Hydrafacial & Medical Facials</li>
+    <li>Laser Hair Reduction</li>
+    <li>Microneedling & GFC Therapy</li>
+    <li>Acne Scar & Pigmentation Solutions</li>
+    <li>Anti-Aging, Botox & Fillers</li>
+    <li>Semi-Permanent Make-Up</li>
+  </ul>
+</section>
+
+<section>
   <h2>Inside Our Clinic</h2>
 
-  <div class="image-grid">
+  <div class="clinic-images">
     <img src="https://raw.githubusercontent.com/Aesthetics-SimranMalra/images/main/office.jpeg" alt="Clinic Office">
     <img src="https://raw.githubusercontent.com/Aesthetics-SimranMalra/images/main/main_table.jpeg" alt="Treatment Area">
   </div>
 </section>
 
+<section>
+  <h2>Why Choose Us</h2>
+  <p>
+    Every face is unique. At Aesthetics By Simran Malra, treatments are never generic.
+    We blend medical expertise with aesthetic precision to deliver safe, subtle and
+    confidence-boosting results.
+  </p>
+</section>
+
 <footer>
-  <p>📍 Sirsa, Haryana</p>
-  <p>📞 +91 81081 08042</p>
+  <p>📍 Near Bhuman Shah Chowk, Barnala Road, Sirsa, Haryana</p>
+  <p>📞 Call / WhatsApp: <a href="wa.me/918108108042">+91 81081 08042</a></p>
 </footer>
 
 </body>
