--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ nav a:hover{color:var(--primary);}
   font-weight:500;
 }
 
-/* 🔹 IMAGE ADDITIONS (NON-DESTRUCTIVE) */
+/* HERO IMAGE (ADDED SAFELY) */
 .hero-image{
   margin-top:40px;
   max-width:900px;
@@ -130,9 +130,12 @@ footer{
   color:#ccc;
   padding:40px 8%;
 }
-footer a{color:var(--primary);text-decoration:none}
+footer a{
+  color:var(--primary);
+  text-decoration:none;
+}
 
-/* RESPONSIVE (ONLY WHERE NEEDED) */
+/* RESPONSIVE */
 @media(min-width:768px){
   .hero-image img{
     height:460px;
@@ -160,7 +163,6 @@ footer a{color:var(--primary);text-decoration:none}
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="services.html">Services</a>
-    <a href="gallery.html">Gallery</a>
     <a href="contact.html">Contact</a>
   </nav>
 </header>
@@ -170,7 +172,6 @@ footer a{color:var(--primary);text-decoration:none}
   <p>Personalised, ethical and result-driven aesthetic care designed to enhance your natural beauty.</p>
   <a class="btn" href="contact.html">Book Appointment</a>
 
-  <!-- HERO IMAGE -->
   <div class="hero-image">
     <img src="https://raw.githubusercontent.com/Aesthetics-SimranMalra/images/main/simran_main.jpeg" alt="Simran Malra">
   </div>
@@ -208,7 +209,7 @@ footer a{color:var(--primary);text-decoration:none}
 
 <footer>
   <p>📍 Near Bhuman Shah Chowk, Barnala Road, Sirsa, Haryana</p>
-  <p>📞 Call / WhatsApp: <a href="wa.me/918108108042">+91 81081 08042</a></p>
+  <p>📞 Call / WhatsApp: <a href="https://wa.me/918108108042">+91 81081 08042</a></p>
 </footer>
 
 </body>
