--- a/contact.html
+++ b/contact.html
@@ -150,7 +150,7 @@
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="services.html">Services</a>
-    <a href="gallery.html">Gallery</a>
+    <a href="contact.html">Contact</a>
   </nav>
 </header>
 
