--- a/about.html
+++ b/about.html
@@ -96,14 +96,18 @@ footer{
 <section>
   <h2>Meet Simran Malra</h2>
   <p>
-    Aesthetics By Simran Malra is a specialised skin and aesthetic clinic based in Sirsa, Haryana.
-    We focus on enhancing natural beauty through medically-backed aesthetic treatments.
+    Aesthetics by Simran Malra is a premium aesthetic clinic dedicated to enhancing natural beauty through advanced, safe, and result-oriented treatments. Our philosophy is rooted in the belief that aesthetics is not about changing who you are, but about refining, restoring, and maintaining your best features with precision and care.
   </p>
   <p>
-    Skin care is not an expense — it is a <strong>skin-vestment</strong>.
-    Each treatment is thoughtfully curated after detailed consultation, ensuring safety,
-    comfort and refined, natural-looking outcomes.
+We offer a comprehensive range of skin, laser, and facial treatments, all delivered using modern technology and medically approved protocols. Every procedure is performed with a strong emphasis on safety, efficacy, and visible results. Our clinic environment is calm, hygienic, and thoughtfully designed to ensure a comfortable and reassuring experience for every client.
   </p>
+  <p>
+    At Aesthetics by Simran Malra, no two treatment plans are the same. Each service is personally curated after a detailed consultation, taking into account your skin type, concerns, and long-term goals. This individualized approach allows us to deliver results that look natural, balanced, and refined.
+  </p>
+  <p>
+    Client comfort, confidence, and satisfaction remain at the core of everything we do. From your first consultation to post-treatment care, we are committed to providing professional guidance, ethical practices, and consistent results you can trust.
+  </p>
+
 </section>
 
 <section>
