--- a/contact.html
+++ b/contact.html
@@ -156,7 +156,7 @@
 
 <section>
   <h2>Contact Details</h2>
-  <p><strong>Address:</strong> Near Bhuman Shah Chowk, Barnala Road, Sirsa, Haryana 125055</p>
+  <p><strong>Address:</strong> Barnala Road, near Bhuman Shah Chowk, Bhagat Singh Colony, Sirsa, Haryana 125055 </p>
   <p><strong>Phone / WhatsApp:</strong> <a href="tel:+918108108042">+91 81081 08042</a></p>
 </section>
 
