--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ footer a{color:var(--primary);text-decoration:none}
   <p>📍 Near Bhuman Shah Chowk, Barnala Road, Sirsa, Haryana</p>
   <p>
   📞 Call / WhatsApp:
-  <a href="https://wa.me/918108108042?text=Hello,%20I%20would%20like%20to%20book%20a%20consultation"
+  <a href="https://wa.me/918108108042?text=Hello,%20I%20would%20like%20to%20book%20a%20consultation."
      target="_blank">
     +91 81081 08042
   </a>
