--- a/contact.html
+++ b/contact.html
@@ -204,7 +204,7 @@
 <section>
   <h2>Send Us a WhatsApp Message</h2>
   <p class="note">
-    This form sends your message directly to our WhatsApp in a clean, well-formatted style.
+    This form sends your message directly to our WhatsApp.
   </p>
 
   <form onsubmit="sendWhatsApp(); return false;">
@@ -317,7 +317,7 @@
 *Message:*
 ${msg || '—'}`;
 
-    const url="https://wa.me/918108108042?text="+encodeURIComponent(text);
+    const url="https://wa.me/917015607575?text="+encodeURIComponent(text);
     window.open(url,'_blank');
   }
 </script>
