--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 
   <style>
     body{
-      font-family: "Segoe UI", Arial, sans-serif;
+      font-family:"Segoe UI",Arial,sans-serif;
       background:#f7f5f2;
       margin:0;
       color:#333;
@@ -22,10 +22,7 @@
 
     header h1{margin:0;font-size:32px;}
 
-    nav{
-      margin-top:10px;
-    }
-
+    nav{margin-top:10px;}
     nav a{
       color:#fff;
       margin:0 12px;
@@ -42,33 +39,7 @@
       box-shadow:0 8px 20px rgba(0,0,0,0.06);
     }
 
-    h2{
-      margin-top:0;
-      color:#444;
-    }
-
-    .contact-box p{
-      margin:8px 0;
-      font-size:15px;
-    }
-
-    .contact-box a{
-      color:#c06c84;
-      text-decoration:none;
-      font-weight:600;
-    }
-
-    .hall-image{
-      max-width:900px;
-      margin:25px auto;
-    }
-
-    .hall-image img{
-      transform: scale(0.6);
-      border-radius:18px;
-      background:#f4efe9;
-      padding:6px;
-    }
+    h2{margin-top:0;color:#444;}
 
     .note{
       font-size:14px;
@@ -76,9 +47,19 @@
       margin-bottom:18px;
     }
 
-    form{
-      max-width:800px;
-      margin:auto;
+    label{
+      display:block;
+      margin-bottom:16px;
+      font-weight:500;
+    }
+
+    input,textarea,select{
+      width:100%;
+      padding:12px;
+      margin-top:6px;
+      border-radius:8px;
+      border:1px solid #ccc;
+      font-size:15px;
     }
 
     .type-select{
@@ -103,21 +84,6 @@
       color:#fff;
     }
 
-    label{
-      display:block;
-      margin-bottom:16px;
-      font-weight:500;
-    }
-
-    input,textarea{
-      width:100%;
-      padding:12px;
-      margin-top:6px;
-      border-radius:8px;
-      border:1px solid #ccc;
-      font-size:15px;
-    }
-
     fieldset{
       border:1px solid #ddd;
       padding:20px;
@@ -132,7 +98,7 @@
 
     .services-grid{
       display:grid;
-      grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+      grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
       gap:12px 20px;
       margin-top:14px;
     }
@@ -161,10 +127,6 @@
       cursor:pointer;
     }
 
-    .send-btn:hover{
-      opacity:0.95;
-    }
-
     footer{
       text-align:center;
       font-size:14px;
@@ -191,31 +153,18 @@
   </nav>
 </header>
 
-<section class="contact-box">
-  <h2>Clinic Details</h2>
-  <p><strong>Address:</strong> Barnala Road, near Bhuman Shah Chowk, Bhagat Singh Colony, Sirsa, Haryana 125055</p>
-  <p><strong>Phone / WhatsApp:</strong> <a href="tel:+918108108042">+91 81081 08042</a></p>
-</section>
-
-<div class="hall-image">
-  <img src="https://raw.githubusercontent.com/Aesthetics-SimranMalra/images/main/hall.jpeg" alt="Clinic Hall">
-</div>
-
 <section>
   <h2>Send Us a WhatsApp Message</h2>
-  <p class="note">
-    This form sends your message directly to our WhatsApp.
-  </p>
+  <p class="note">This form sends your message directly to our WhatsApp.</p>
 
   <form onsubmit="sendWhatsApp(); return false;">
 
-    <!-- TYPE SELECTION -->
     <div class="type-select">
       <button type="button" id="btnQuery" onclick="setType('Query')">General Query</button>
       <button type="button" id="btnAppointment" onclick="setType('Appointment')">Book Appointment</button>
     </div>
 
-    <input type="hidden" id="type" required>
+    <input type="hidden" id="type">
 
     <label>
       Full Name *
@@ -224,8 +173,26 @@
 
     <label>
       Phone Number
-      <input type="tel" id="phone">
+      <div style="display:flex;gap:10px;">
+        <select id="countryCode">
+          <option value="+91" selected>🇮🇳 +91</option>
+          <option value="+1">🇺🇸 +1</option>
+          <option value="+44">🇬🇧 +44</option>
+          <option value="+971">🇦🇪 +971</option>
+          <option value="+61">🇦🇺 +61</option>
+        </select>
+        <input
+          type="tel"
+          id="phone"
+          placeholder="Enter number"
+          inputmode="numeric"
+          pattern="[0-9]*"
+          oninput="this.value=this.value.replace(/[^0-9]/g,'')"
+        >
+      </div>
     </label>
+
+    <p class="note">WhatsApp number preferably (for phone/email)</p>
 
     <label>
       Email Address
@@ -234,31 +201,55 @@
 
     <p class="note">Please provide at least a phone number or an email.</p>
 
+    <!-- SERVICES -->
     <fieldset>
       <legend>Query is related to</legend>
 
       <div class="services-grid">
-        <label><input type="checkbox" class="service" value="None"> None</label>
         <label><input type="checkbox" class="service" value="Customised Medi-Facials"> Customised Medi-Facials</label>
-        <label><input type="checkbox" class="service" value="Jet Peel Facial"> Jet Peel Facial</label>
+        <label><input type="checkbox" class="service" value="Jet Peel Facial (Advanced Hydra)"> Jet Peel Facial (Advanced Hydra)</label>
         <label><input type="checkbox" class="service" value="Hydrafacial"> Hydrafacial</label>
         <label><input type="checkbox" class="service" value="Microdermabrasion"> Microdermabrasion</label>
+        <label><input type="checkbox" class="service" value="Vampire Facial"> Vampire Facial</label>
         <label><input type="checkbox" class="service" value="Laser Treatments"> Laser Treatments</label>
         <label><input type="checkbox" class="service" value="Microneedling"> Microneedling</label>
-        <label><input type="checkbox" class="service" value="Laser Hair Reduction"> Laser Hair Reduction</label>
-        <label><input type="checkbox" class="service" value="HIFU"> Skin Tightening (HIFU)</label>
+        <label><input type="checkbox" class="service" value="Laser Hair Reduction (LHR)"> Laser Hair Reduction (LHR)</label>
+        <label><input type="checkbox" class="service" value="Electrolysis (White Hair)"> Electrolysis (Laser for White Hair)</label>
+        <label><input type="checkbox" class="service" value="Skin Tightening (HIFU)"> Skin Tightening Treatment (HIFU)</label>
+        <label><input type="checkbox" class="service" value="Skin Tag Removal"> Skin Tag Removal</label>
+        <label><input type="checkbox" class="service" value="Mole Removal"> Mole Removal</label>
+        <label><input type="checkbox" class="service" value="Ear Lobe Repair"> Ear-Lobe Repair</label>
+        <label><input type="checkbox" class="service" value="Wart Removal"> Wart Removal</label>
+        <label><input type="checkbox" class="service" value="Dermaplaning"> Dermaplaning</label>
+        <label><input type="checkbox" class="service" value="Pigmentation Treatment"> Pigmentation Treatment</label>
+        <label><input type="checkbox" class="service" value="Dark Circle Treatment"> Dark Circle Treatment</label>
+        <label><input type="checkbox" class="service" value="Full Body Polishing"> Full Body Polishing</label>
+        <label><input type="checkbox" class="service" value="Melasma Treatment"> Melasma Treatment</label>
+        <label><input type="checkbox" class="service" value="GFC for Face"> GFC (Face)</label>
+        <label><input type="checkbox" class="service" value="GFC for Hair"> GFC (Hair)</label>
+        <label><input type="checkbox" class="service" value="Xanthalasma Treatment"> Xanthalasma Treatment</label>
+        <label><input type="checkbox" class="service" value="Acne Scar Treatment"> Acne Scar Treatment</label>
+        <label><input type="checkbox" class="service" value="Anti Aging Boosters"> Anti-Aging Boosters</label>
+        <label><input type="checkbox" class="service" value="Semi Permanent Make-up"> Semi Permanent Make-up</label>
+        <label><input type="checkbox" class="service" value="Microblading"> Microblading</label>
+        <label><input type="checkbox" class="service" value="Nano Shading"> Nano Shading</label>
+        <label><input type="checkbox" class="service" value="Lip Neutralisation"> Lip Neutralisation</label>
+        <label><input type="checkbox" class="service" value="Lip Tint"> Lip Tint</label>
+        <label><input type="checkbox" class="service" value="Eyelash Extension"> Eyelash Extension</label>
+        <label><input type="checkbox" class="service" value="Eyelash Lift"> Eyelash Lift</label>
+        <label><input type="checkbox" class="service" value="BB Glow Treatment"> BB Glow Treatment</label>
         <label><input type="checkbox" class="service" value="Botox"> Botox</label>
         <label><input type="checkbox" class="service" value="Fillers"> Fillers</label>
+        <label><input type="checkbox" class="service" value="Q Switch Laser"> Q-Switch Laser (Tattoo, Freckles, Carbon, Pigmentation, Open Pores)</label>
       </div>
     </fieldset>
 
     <label>
       Your Message
-      <textarea id="message" rows="6" placeholder="Please describe your concern or request..."></textarea>
+      <textarea id="message" rows="6"></textarea>
     </label>
 
     <button type="submit" class="send-btn">Send via WhatsApp</button>
-
   </form>
 </section>
 
@@ -267,22 +258,6 @@
 </footer>
 
 <script>
-  const serviceCheckboxes = document.querySelectorAll('.service');
-
-  serviceCheckboxes.forEach(cb=>{
-    cb.addEventListener('change',()=>{
-      const noneChecked=[...serviceCheckboxes].find(c=>c.value==="None"&&c.checked);
-      serviceCheckboxes.forEach(c=>{
-        if(noneChecked && c.value!=="None"){
-          c.checked=false;
-          c.disabled=true;
-        }else{
-          c.disabled=false;
-        }
-      });
-    });
-  });
-
   function setType(value){
     document.getElementById('type').value=value;
     document.getElementById('btnQuery').classList.toggle('active',value==="Query");
@@ -292,32 +267,26 @@
   function sendWhatsApp(){
     const type=document.getElementById('type').value;
     const name=document.getElementById('name').value.trim();
+    const code=document.getElementById('countryCode').value;
     const phone=document.getElementById('phone').value.trim();
     const email=document.getElementById('email').value.trim();
     const msg=document.getElementById('message').value.trim();
 
-    if(!type){
-      alert("Please select Query or Appointment.");
-      return;
-    }
-    if(!phone && !email){
-      alert("Please provide a phone number or email.");
-      return;
-    }
+    if(!type){alert("Please select Query or Appointment.");return;}
+    if(!phone && !email){alert("Please provide a phone number or email.");return;}
 
     const services=[...document.querySelectorAll('.service:checked')].map(s=>s.value).join(', ') || 'Not specified';
 
     const text=
 `*Type:* ${type}
 *Name:* ${name}
-*Phone:* ${phone || '—'}
+*Phone:* ${phone ? code+' '+phone : '—'}
 *Email:* ${email || '—'}
-*Related To:* ${services}
+*Services:* ${services}
 
 ${msg || '—'}`;
 
-    const url="https://wa.me/917015607575?text="+encodeURIComponent(text);
-    window.open(url,'_blank');
+    window.open("https://wa.me/918108108042?text="+encodeURIComponent(text),'_blank');
   }
 </script>
 
