--- a/contact.html
+++ b/contact.html
@@ -175,7 +175,87 @@
       Phone Number
       <div style="display:flex;gap:10px;">
         <select id="countryCode">
-          <option value="+91" selected>🇮🇳 +91</option>
+<option value="+91" selected>🇮🇳 India (+91)</option>
+<option value="+1">🇨🇦 Canada (+1)</option>
+<option value="+61">🇦🇺 Australia (+61)</option>
+
+<option disabled>──────────</option>
+
+<option value="+54">🇦🇷 Argentina (+54)</option>
+<option value="+43">🇦🇹 Austria (+43)</option>
+<option value="+973">🇧🇭 Bahrain (+973)</option>
+<option value="+880">🇧🇩 Bangladesh (+880)</option>
+<option value="+32">🇧🇪 Belgium (+32)</option>
+<option value="+55">🇧🇷 Brazil (+55)</option>
+<option value="+359">🇧🇬 Bulgaria (+359)</option>
+
+<option value="+86">🇨🇳 China (+86)</option>
+<option value="+57">🇨🇴 Colombia (+57)</option>
+<option value="+385">🇭🇷 Croatia (+385)</option>
+<option value="+357">🇨🇾 Cyprus (+357)</option>
+<option value="+420">🇨🇿 Czech Republic (+420)</option>
+
+<option value="+45">🇩🇰 Denmark (+45)</option>
+<option value="+20">🇪🇬 Egypt (+20)</option>
+<option value="+372">🇪🇪 Estonia (+372)</option>
+
+<option value="+358">🇫🇮 Finland (+358)</option>
+<option value="+33">🇫🇷 France (+33)</option>
+
+<option value="+49">🇩🇪 Germany (+49)</option>
+<option value="+30">🇬🇷 Greece (+30)</option>
+<option value="+852">🇭🇰 Hong Kong (+852)</option>
+<option value="+36">🇭🇺 Hungary (+36)</option>
+
+<option value="+62">🇮🇩 Indonesia (+62)</option>
+<option value="+353">🇮🇪 Ireland (+353)</option>
+<option value="+39">🇮🇹 Italy (+39)</option>
+<option value="+81">🇯🇵 Japan (+81)</option>
+<option value="+254">🇰🇪 Kenya (+254)</option>
+<option value="+965">🇰🇼 Kuwait (+965)</option>
+
+<option value="+371">🇱🇻 Latvia (+371)</option>
+<option value="+370">🇱🇹 Lithuania (+370)</option>
+<option value="+352">🇱🇺 Luxembourg (+352)</option>
+
+<option value="+60">🇲🇾 Malaysia (+60)</option>
+<option value="+52">🇲🇽 Mexico (+52)</option>
+<option value="+377">🇲🇨 Monaco (+377)</option>
+
+<option value="+31">🇳🇱 Netherlands (+31)</option>
+<option value="+64">🇳🇿 New Zealand (+64)</option>
+<option value="+234">🇳🇬 Nigeria (+234)</option>
+<option value="+47">🇳🇴 Norway (+47)</option>
+
+<option value="+92">🇵🇰 Pakistan (+92)</option>
+<option value="+63">🇵🇭 Philippines (+63)</option>
+<option value="+48">🇵🇱 Poland (+48)</option>
+<option value="+351">🇵🇹 Portugal (+351)</option>
+
+<option value="+974">🇶🇦 Qatar (+974)</option>
+<option value="+40">🇷🇴 Romania (+40)</option>
+<option value="+7">🇷🇺 Russia (+7)</option>
+
+<option value="+966">🇸🇦 Saudi Arabia (+966)</option>
+<option value="+65">🇸🇬 Singapore (+65)</option>
+<option value="+421">🇸🇰 Slovakia (+421)</option>
+<option value="+386">🇸🇮 Slovenia (+386)</option>
+<option value="+27">🇿🇦 South Africa (+27)</option>
+<option value="+34">🇪🇸 Spain (+34)</option>
+<option value="+94">🇱🇰 Sri Lanka (+94)</option>
+<option value="+46">🇸🇪 Sweden (+46)</option>
+<option value="+41">🇨🇭 Switzerland (+41)</option>
+
+<option value="+66">🇹🇭 Thailand (+66)</option>
+<option value="+90">🇹🇷 Turkey (+90)</option>
+
+<option value="+971">🇦🇪 United Arab Emirates (+971)</option>
+<option value="+44">🇬🇧 United Kingdom (+44)</option>
+<option value="+1">🇺🇸 United States (+1)</option>
+
+<option value="+84">🇻🇳 Vietnam (+84)</option>
+
+          
           <option value="+1">🇺🇸 +1</option>
           <option value="+44">🇬🇧 +44</option>
           <option value="+971">🇦🇪 +971</option>
